// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Logo > draws the lockup (dark) exactly as before 1`] = `
[
  {
    "paths": [
      [
        "M0 0 L22 6 L22 106 L0 100 Z",
        "var(--color-ivory)",
      ],
      [
        "M19.6 5.345454545454546 L22 6 L22 106 L19.6 105.34545454545454 Z",
        "var(--color-champagne)",
      ],
      [
        "M18 12 L40 18 L40 100 L18 94 Z",
        "#B3AAA0",
      ],
      [
        "M37.6 17.345454545454544 L40 18 L40 100 L37.6 99.34545454545454 Z",
        "var(--color-champagne)",
      ],
      [
        "M36 23 L58 29 L58 96 L36 90 Z",
        "var(--color-champagne)",
      ],
      [
        "M55.6 28.345454545454544 L58 29 L58 96 L55.6 95.34545454545454 Z",
        "#A8863F",
      ],
      [
        "M54 35 L76 41 L76 92 L54 86 Z",
        "#8A8377",
      ],
      [
        "M73.6 40.345454545454544 L76 41 L76 92 L73.6 91.34545454545454 Z",
        "#A8863F",
      ],
    ],
    "viewBox": "0 0 76 106",
  },
]
`;

exports[`Logo > draws the lockup (light) exactly as before 1`] = `
[
  {
    "paths": [
      [
        "M0 0 L22 6 L22 106 L0 100 Z",
        "var(--color-charcoal)",
      ],
      [
        "M19.6 5.345454545454546 L22 6 L22 106 L19.6 105.34545454545454 Z",
        "var(--color-champagne)",
      ],
      [
        "M18 12 L40 18 L40 100 L18 94 Z",
        "var(--color-taupe)",
      ],
      [
        "M37.6 17.345454545454544 L40 18 L40 100 L37.6 99.34545454545454 Z",
        "var(--color-champagne)",
      ],
      [
        "M36 23 L58 29 L58 96 L36 90 Z",
        "var(--color-champagne)",
      ],
      [
        "M55.6 28.345454545454544 L58 29 L58 96 L55.6 95.34545454545454 Z",
        "#A8863F",
      ],
      [
        "M54 35 L76 41 L76 92 L54 86 Z",
        "var(--color-sand)",
      ],
      [
        "M73.6 40.345454545454544 L76 41 L76 92 L73.6 91.34545454545454 Z",
        "#A8863F",
      ],
    ],
    "viewBox": "0 0 76 106",
  },
]
`;

exports[`Logo > draws the mark (dark) exactly as before 1`] = `
[
  {
    "paths": [
      [
        "M0 0 L22 6 L22 106 L0 100 Z",
        "var(--color-ivory)",
      ],
      [
        "M19.6 5.345454545454546 L22 6 L22 106 L19.6 105.34545454545454 Z",
        "var(--color-champagne)",
      ],
      [
        "M18 12 L40 18 L40 100 L18 94 Z",
        "#B3AAA0",
      ],
      [
        "M37.6 17.345454545454544 L40 18 L40 100 L37.6 99.34545454545454 Z",
        "var(--color-champagne)",
      ],
      [
        "M36 23 L58 29 L58 96 L36 90 Z",
        "var(--color-champagne)",
      ],
      [
        "M55.6 28.345454545454544 L58 29 L58 96 L55.6 95.34545454545454 Z",
        "#A8863F",
      ],
      [
        "M54 35 L76 41 L76 92 L54 86 Z",
        "#8A8377",
      ],
      [
        "M73.6 40.345454545454544 L76 41 L76 92 L73.6 91.34545454545454 Z",
        "#A8863F",
      ],
    ],
    "viewBox": "0 0 76 106",
  },
]
`;

exports[`Logo > draws the stacked (light) exactly as before 1`] = `
[
  {
    "paths": [
      [
        "M0 0 L22 6 L22 106 L0 100 Z",
        "var(--color-charcoal)",
      ],
      [
        "M19.6 5.345454545454546 L22 6 L22 106 L19.6 105.34545454545454 Z",
        "var(--color-champagne)",
      ],
      [
        "M18 12 L40 18 L40 100 L18 94 Z",
        "var(--color-taupe)",
      ],
      [
        "M37.6 17.345454545454544 L40 18 L40 100 L37.6 99.34545454545454 Z",
        "var(--color-champagne)",
      ],
      [
        "M36 23 L58 29 L58 96 L36 90 Z",
        "var(--color-champagne)",
      ],
      [
        "M55.6 28.345454545454544 L58 29 L58 96 L55.6 95.34545454545454 Z",
        "#A8863F",
      ],
      [
        "M54 35 L76 41 L76 92 L54 86 Z",
        "var(--color-sand)",
      ],
      [
        "M73.6 40.345454545454544 L76 41 L76 92 L73.6 91.34545454545454 Z",
        "#A8863F",
      ],
    ],
    "viewBox": "0 0 76 106",
  },
]
`;
